2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (set1_e0_mapping): Fix swap between
	PgUp and PgDown.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump version to 1.99.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Give ATA device a bit more time on first try in order to allow disks
	to spin up.

	* grub-core/disk/ata.c (grub_atapi_identify): Use GRUB_ATA_TOUT_DEV_INIT
	if dev->present is 1. Reset dev->present on failure.
	(grub_ata_device_initialize): Set dev->present to 1.
	* include/grub/ata.h (GRUB_ATA_TOUT_DEV_INIT): New value.
	(grub_ata_device): New member 'present'.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Update hash.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Flush caches on DMA memory.

	* grub-core/kern/mips/cache.S (grub_arch_sync_dma_caches): New function.
	* grub-core/bus/pci.c (grub_memalign_dma32): Flush caches.
	(grub_dma_free): Likewise.
	* include/grub/cache.h (grub_arch_sync_dma_caches): New declaration.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/yeeloong/fwstart.S: Add explicit set mips3
	to avoid asm treating ld and sd as macros.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/startup_raw.S: Flush cache after loading
	decompressor.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/startup_raw.S: Use jalr rather than bal to call
	grub_decompress_core since later would fail if grub_decompress_core
	is too far.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/dl.c (grub_arch_dl_relocate_symbols): Handle
	R_MIPS_JALR since it's used by newer compiler.

2011-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Correctly handle the Linux in root.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>
