@@ -1,5 +1,11 @@
 2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/menuentry.c (grub_cmd_menuentry): Correctly
+	handle class-free menuentries.
+	(grub_normal_add_menu_entry): Add a check to be sure.
+
+2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/term/at_keyboard.c (set1_e0_mapping): Fix swap between
 	PgUp and PgDown.
 
